--- a/modules/kafka_services/kafka_services.links.menu.yml
+++ b/modules/kafka_services/kafka_services.links.menu.yml
@@ -1,5 +1,5 @@
-event_dispatcher.kafka_configuration_form:
+kafka_services.kafka_configuration_form:
   title: Kafka Configuration
   description: 'Configure kafka based on event dispatcher.'
-  route_name: event_dispatcher.kafka_configuration_form
+  route_name: kafka_services.kafka_configuration_form
   parent: system.admin_config_system
