--- a/modules/kafka_services/kafka_services.routing.yml
+++ b/modules/kafka_services/kafka_services.routing.yml
@@ -1,7 +1,7 @@
-event_dispatcher.kafka_configuration_form:
+kafka_services.kafka_configuration_form:
   path: '/admin/config/system/kafka_configuration'
   defaults:
-    _form: 'Drupal\event_dispatcher\Form\KafkaConfigForm'
+    _form: 'Drupal\kafka_services\Form\KafkaConfigForm'
     _title: 'Configure Kafka'
   requirements:
     _permission: 'access administration pages'
