--- a/event_dispatcher.services.yml
+++ b/event_dispatcher.services.yml
@@ -2,3 +2,7 @@ services:
   event_dispatcher:
     class: Drupal\event_dispatcher\EventDispatcher\EventDispatcher
     arguments: ['@service_container']
+
+  event_dispatcher.event_service:
+    class: Drupal\event_dispatcher\Services\EventServices
+    arguments: ['@config.factory']
