--- a/modules/rdkafka/rdkafka.info.yml
+++ b/modules/rdkafka/rdkafka.info.yml
@@ -5,6 +5,7 @@ core_version_requirement: ^8.7.7 || ^9
 hidden: false
 dependencies:
   - event_dispatcher
+configure: rdkafka.kafka_configuration_form
 
 package: Event
 
